--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
     <div class="news-container">
         <div class="news-card" onclick="openModal(1)">
-            <img src="https://ichef.bbci.co.uk/ace/ws/800/cpsprodpb/60ca/live/b64852f0-d25d-11f0-b6dc-c3fa29c21ab2.jpg.webp" alt="Banjir Aceh">
+            <img src="https://ichef.bbci.co.uk/ace/ws/800/cpsprodpb/60ca/live/b64852f0-d25d-11f0-b6dc-c3fa29c21ab2.jpg" alt="Banjir Aceh">
             <div class="content">
                 <h3>Banjir Rendam Permukiman Warga Aceh</h3>
                 <p>Hujan deras menyebabkan banjir di sejumlah wilayah Aceh.</p>
